update event & notification